--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                     Fruty
                     <p class="boder-bt"></p>
                 </h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati, illo.</p>
+                <p>Shop hoa quả uy tín, đảm bảo sạch sẽ, đảm bảo sức khỏe. <br>Hoa quả ngon, vui cả nhà ^^</p>
                 <a href="#"><i class="fa-brands fa-facebook"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
