--- a/category.html
+++ b/category.html
@@ -60,7 +60,7 @@
             <div class="fruit">
                 <img src="./img/25.jpg" alt="" class="product-img">
                 <p class="product-title">Lựu Đỏ Feru</p>
-                <p class="price">100.000 VND</p>
+                <p class="price">100.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -70,7 +70,7 @@
             <div class="fruit">
                 <img src="./img/26.jpg" alt="" class="product-img">
                 <p class="product-title">Me Ngâm Chua Ngọt</p>
-                <p class="price">60.000 VND</p>
+                <p class="price">60.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -80,7 +80,7 @@
             <div class="fruit">
                 <img src="./img/27.jpg" alt="" class="product-img">
                 <p class="product-title">Nho Xanh Hàn Quốc</p>
-                <p class="price">200.000 VND</p>
+                <p class="price">200.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -90,7 +90,7 @@
             <div class="fruit">
                 <img src="./img/28.jpg" alt="" class="product-img">
                 <p class="product-title">Lê Mỹ</p>
-                <p class="price">80.000 VND</p>
+                <p class="price">80.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -100,7 +100,7 @@
             <div class="fruit">
                 <img src="./img/29.jpg" alt="" class="product-img">
                 <p class="product-title">Dâu Tây Hàn Quốc</p>
-                <p class="price">80.000 VND</p>
+                <p class="price">80.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -110,7 +110,7 @@
             <div class="fruit">
                 <img src="./img/30.jpg" alt="" class="product-img">
                 <p class="product-title">Nho Đen Nhật Bản</p>
-                <p class="price">80.000 VND</p>
+                <p class="price">80.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -120,7 +120,7 @@
             <div class="fruit">
                 <img src="./img/36.jpg" alt="" class="product-img">
                 <p class="product-title">Nho Đỏ Chuỗi ngọc</p>
-                <p class="price">400.000 VND</p>
+                <p class="price">400.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -139,7 +139,7 @@
             <div class="fruit">
                 <img src="./img/1.jpg" alt="" class="product-img">
                 <p class="product-title">Cam Valencia Ai Cập</p>
-                <p class="price">200.000 VND</p>
+                <p class="price">200.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -149,7 +149,7 @@
             <div class="fruit">
                 <img src="./img/2.jpg" alt="" class="product-img">
                 <p class="product-title">Chà Là Tươi Ấn Độ</p>
-                <p class="price">150.000 VND</p>
+                <p class="price">150.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -159,7 +159,7 @@
             <div class="fruit">
                 <img src="./img/3.jpg" alt="" class="product-img">
                 <p class="product-title">Cherry Mỹ</p>
-                <p class="price">300.000 VND</p>
+                <p class="price">300.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -169,7 +169,7 @@
             <div class="fruit">
                 <img src="./img/4.jpg" alt="" class="product-img">
                 <p class="product-title">Cam Vàng Nevel Mỹ</p>
-                <p class="price">250.000 VND</p>
+                <p class="price">250.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -179,7 +179,7 @@
             <div class="fruit">
                 <img src="./img/5.jpg" alt="" class="product-img">
                 <p class="product-title">Dưa Lưới Đài Loan</p>
-                <p class="price">230.000 VND</p>
+                <p class="price">230.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -189,7 +189,7 @@
             <div class="fruit">
                 <img src="./img/6.jpg" alt="" class="product-img">
                 <p class="product-title">Dưa Lê Hàn Quốc</p>
-                <p class="price">300.000 VND</p>
+                <p class="price">300.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -199,7 +199,7 @@
             <div class="fruit">
                 <img src="./img/37.jpg" alt="" class="product-img">
                 <p class="product-title">Nho sữa nhật</p>
-                <p class="price">2000.000 VND</p>
+                <p class="price">2000.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -218,7 +218,7 @@
             <div class="fruit">
                 <img src="./img/7.jpg" alt="" class="product-img">
                 <p class="product-title">Vải thiều </p>
-                <p class="price">50.000 VND</p>
+                <p class="price">50.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -228,7 +228,7 @@
             <div class="fruit">
                 <img src="./img/8.jpg" alt="" class="product-img">
                 <p class="product-title">Chuối Tiền Giang</p>
-                <p class="price">40.000 VND</p>
+                <p class="price">40.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -238,7 +238,7 @@
             <div class="fruit">
                 <img src="./img/9.jpg" alt="" class="product-img">
                 <p class="product-title">Bưởi Năm Roi</p>
-                <p class="price">80.000 VND</p>
+                <p class="price">80.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -248,7 +248,7 @@
             <div class="fruit">
                 <img src="./img/10.jpg" alt="" class="product-img">
                 <p class="product-title">Dưa Hấu</p>
-                <p class="price">80.000 VND</p>
+                <p class="price">80.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -258,7 +258,7 @@
             <div class="fruit">
                 <img src="./img/11.jpg" alt="" class="product-img">
                 <p class="product-title">Sầu Riêng</p>
-                <p class="price">150.000 VND</p>
+                <p class="price">150.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -268,7 +268,7 @@
             <div class="fruit">
                 <img src="./img/12.jpg" alt="" class="product-img">
                 <p class="product-title">Hồng Xiêm</p>
-                <p class="price">60.000 VND</p>
+                <p class="price">60.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -278,7 +278,7 @@
             <div class="fruit">
                 <img src="./img/34.jpg" alt="" class="product-img">
                 <p class="product-title">Ổi bo thanh hà</p>
-                <p class="price">30.000 VND</p>
+                <p class="price">30.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -288,7 +288,7 @@
             <div class="fruit">
                 <img src="./img/35.jpg" alt="" class="product-img">
                 <p class="product-title">chôm chôm long khánh</p>
-                <p class="price">45.000 VND</p>
+                <p class="price">45.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -307,7 +307,7 @@
             <div class="fruit">
                 <img src="./img/13.jpg" alt="" class="product-img">
                 <p class="product-title">Giỏ Trái Cây Cúng</p>
-                <p class="price">200.000 VND</p>
+                <p class="price">200.000 VND/giỏ</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -317,7 +317,7 @@
             <div class="fruit">
                 <img src="./img/14.jpg" alt="" class="product-img">
                 <p class="product-title">Giỏ Trái Cây Thăm Hỏi</p>
-                <p class="price">250.000 VND</p>
+                <p class="price">250.000 VND/giỏ</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -327,7 +327,7 @@
             <div class="fruit">
                 <img src="./img/15.jpg" alt="" class="product-img">
                 <p class="product-title">Giỏ Trái Cây Biếu Tặng</p>
-                <p class="price">250.000 VND</p>
+                <p class="price">250.000 VND/giỏ</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -337,7 +337,7 @@
             <div class="fruit">
                 <img src="./img/16.jpg" alt="" class="product-img">
                 <p class="product-title">Giỏ trái cây loại 1</p>
-                <p class="price">300.000 VND</p>
+                <p class="price">300.000 VND/giỏ</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -347,7 +347,7 @@
             <div class="fruit">
                 <img src="./img/17.jpg" alt="" class="product-img">
                 <p class="product-title">Giỏ Trái Cây Kèm Hoa Tươi</p>
-                <p class="price">290.000 VND</p>
+                <p class="price">290.000 VND/giỏ</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -357,7 +357,7 @@
             <div class="fruit">
                 <img src="./img/18.jpg" alt="" class="product-img">
                 <p class="product-title">Giỏ Trái Cây Đẹp</p>
-                <p class="price">300.000 VND</p>
+                <p class="price">300.000 VND/giỏ</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -367,7 +367,7 @@
             <div class="fruit">
                 <img src="./img/33.jpg" alt="" class="product-img">
                 <p class="product-title">Giỏ Trái Cây Sinh Nhật</p>
-                <p class="price">350.000 VND</p>
+                <p class="price">350.000 VND/giỏ</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -386,7 +386,7 @@
             <div class="fruit">
                 <img src="./img/19.jpg" alt="" class="product-img">
                 <p class="product-title">Mít Sấy Khô</p>
-                <p class="price">50.000 VND</p>
+                <p class="price">50.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -396,7 +396,7 @@
             <div class="fruit">
                 <img src="./img/20.jpg" alt="" class="product-img">
                 <p class="product-title">chuối Sấy Khô</p>
-                <p class="price">50.000 VND</p>
+                <p class="price">50.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -406,7 +406,7 @@
             <div class="fruit">
                 <img src="./img/21.jpg" alt="" class="product-img">
                 <p class="product-title">Mít Sấy Dẻo</p>
-                <p class="price">50.000 VND</p>
+                <p class="price">50.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -416,7 +416,7 @@
             <div class="fruit">
                 <img src="./img/22.jpg" alt="" class="product-img">
                 <p class="product-title">kiwi Sấy Dẻo</p>
-                <p class="price">50.000 VND</p>
+                <p class="price">50.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -426,7 +426,7 @@
             <div class="fruit">
                 <img src="./img/23.jpg" alt="" class="product-img">
                 <p class="product-title">Mít Sấy rộp rộp</p>
-                <p class="price">50.000 VND</p>
+                <p class="price">50.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -436,7 +436,7 @@
             <div class="fruit">
                 <img src="./img/24.jpg" alt="" class="product-img">
                 <p class="product-title">Xoài Sấy Muối Ớt</p>
-                <p class="price">50.000 VND</p>
+                <p class="price">50.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -446,7 +446,7 @@
             <div class="fruit">
                 <img src="./img/31.jpg" alt="" class="product-img">
                 <p class="product-title">Khoai lang sấy giòn</p>
-                <p class="price">50.000 VND</p>
+                <p class="price">50.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
@@ -456,7 +456,7 @@
             <div class="fruit">
                 <img src="./img/32.jpg" alt="" class="product-img">
                 <p class="product-title">mận sấy dẻo</p>
-                <p class="price">50.000 VND</p>
+                <p class="price">50.000 VND/kg</p>
                 <a class="button add-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     Thêm vào giỏ hàng
